--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -11,7 +11,11 @@
     text-decoration: none;
 }
 
-html {
+ul {
+    list-style-type: none;
+}
+
+body {
     margin: 0 50px;
     @include mobile {
         margin : 0 20px;
