--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,6 @@
 @import "./base/base";
 @import "./components/tagBtn";
 @import "./layout/header";
+@import "./layout/indexprofile";
+@import "./layout/profile";
 @import "./pages/index";
