--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,7 @@
 @import "./layout/header";
 @import "./layout/indexprofile";
 @import "./layout/profile";
+@import "./layout/contact";
+@import "./layout/picGrid&Carrousel";
 @import "./pages/index";
+@import "./pages/page-photographe";
