liens entre index et pages + menu de tri photos

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -104,7 +104,7 @@ html {
 }
 
 .pictures {
-    label {
+    .pic-sort-title {
         color: $color-black;
         font-size: 1.125rem;
         font-weight: 700;
