--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import "./base/typography";
 @import "./base/base";
 @import "./components/tagBtn";
+@import "./components/picSortBtn";
 @import "./layout/header";
 @import "./layout/indexprofile";
 @import "./layout/profile";
