--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,3 +24,12 @@ html {
         padding : 0 20px;
     }
 }
+
+.sr-only {
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+}
