--- a/sass/layout/_picGrid&Carrousel.scss
+++ b/sass/layout/_picGrid&Carrousel.scss
@@ -1,7 +1,9 @@
 .pic-grid {
+    position: relative;
+    top : 0;
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    gap: 30px 8%;
     margin-top: 60px;
     @include mobile {
         flex-direction: column;
@@ -9,13 +11,12 @@
         margin-top: 50px;
     }
     .pictures-item {
-        margin-bottom: 30px;
         width: 28%;
         @include mobile {
             width: 100%;
             margin-bottom: 10px;
         }
-        img {
+        img, video {
             width: 100%;
             height: 300px;
             border-radius: 5px;
@@ -25,8 +26,14 @@
             display: flex;
             justify-content: space-between;
             margin-top: 5px;
-            p:first-child {
-                flex: 50%;
+            p{
+                white-space: nowrap;
+            }
+            p:first-child{
+                flex : 50%;
+                white-space: nowrap;
+                overflow: hidden !important;
+                text-overflow: ellipsis;
             }
             p:nth-child(2){
                 margin-right: 15px;
