ajout likes au click, ajouts titres dans json

--- a/sass/layout/_profile.scss
+++ b/sass/layout/_profile.scss
@@ -31,11 +31,11 @@
             }
         }
         &-bottom {
-            position: fixed;
+            position: sticky;
+            bottom: 0; left: 80%;
             display: flex;
             justify-content: space-between;
-            min-width: 375px;
-            bottom: 0vh; right: 50px;
+            max-width: 375px;
             padding : 20px 30px ;
             background-color: $color-btn-dynamic;
             border-radius: 5px 5px 0 0;
