--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -2,21 +2,18 @@
     display: none;
     position: fixed;
     top: 0; left: 0;
-    z-index: 1;
+    z-index: 2;
     height: 100%;
     width: 100%;
+    overflow: auto;
     background-color: rgba($color: #c4c4c4, $alpha: 0.4);
 }
 
 .modal-contact {
-    position: absolute;
+    position: relative;
+    overflow: hidden;
     width: 700px;
-    height: 80vh;
-    max-height: 900px;
-    overflow: scroll;
-    left: 50%;
-    margin-left: -350px;
-    margin-top: 75px;
+    margin: 10% auto;
     background-color: $color-btn-dynamic;
     opacity: 1;
     border-radius: 5px;
