--- a/sass/layout/_picGrid&Carrousel.scss
+++ b/sass/layout/_picGrid&Carrousel.scss
@@ -31,6 +31,7 @@
             }
             p:first-child{
                 flex : 50%;
+                padding-right: 10px;
                 white-space: nowrap;
                 overflow: hidden !important;
                 text-overflow: ellipsis;
