--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,7 @@
 @import "./layout/indexprofile";
 @import "./layout/profile";
 @import "./layout/contact";
-@import "./layout/picGrid&Carrousel";
+@import "./layout/picGrid";
+@import "./layout/lightbox";
 @import "./pages/index";
 @import "./pages/page-photographe";
