lightbox, navigation clavier, aria

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "./utils/mixins";
 @import "./base/typography";
 @import "./base/base";
-@import "./components/tagBtn";
+@import "./components/tagAndBtn";
 @import "./components/picSortBtn";
 @import "./layout/header";
 @import "./layout/indexprofile";
@@ -11,4 +11,3 @@
 @import "./layout/picGrid";
 @import "./layout/lightbox";
 @import "./pages/index";
-@import "./pages/page-photographe";
