--- a/sass/components/_picSortBtn.scss
+++ b/sass/components/_picSortBtn.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     padding-top: 15px;
-    &-buttons {
+    &-listbox {
         position: absolute;
         left: 150px;
         z-index: 1;
@@ -41,15 +41,15 @@
                 width: 150px;
                 background-color: $color-white;
         }
-        .date, .title, .line-separate {
+        #date, #title, .line-separate {
             position: absolute;
             top: 0;
             z-index: -1;
         }
         .show {
-            position: relative;
-            top: auto;
-            z-index: 0;
+            position: relative !important;
+            top: auto !important;
+            z-index: 0 !important;
         }
 
     }
